--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
-     <link rel="stylesheet" href="style.css">
-    <title></title>
+<meta charset="UTF-8">
+    <title>My Profile Card</title>
+
   </head>
   <body>
     
