--- a/index.html
+++ b/index.html
@@ -6,6 +6,19 @@
   <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    
+    <!-- Main container -->
+<div ID="profileCard">
+
+  <!-- Profile picture -->
+  <img src="https://via.placeholder.com/150" alt="Profile Picture">
+
+  <!-- Name -->
+  <h2 class="Alexander ">Alexander Rodriguez </h2>
+
+  <!-- Bio -->
+  <p class="Rodriguez">Write a few fun sentences about yourself.</p>
+
+</div>
+
   </body>
 </html>
