--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <div ID="profileCard">
 
   <!-- Profile picture -->
-  <img src="https://github.com/AlexRod08-pumpkin/-day1-profile-card/blob/main/meta%20and%20lang.jpg?raw=true" alt="Profile Picture" width:"150" height:"150" >
+  <img src="https://github.com/AlexRod08-pumpkin/-day1-profile-card/blob/main/meta%20and%20lang.jpg?raw=true" alt="Profile Picture"  >
 
   <!-- Name -->
   <h2 class="Alex">Alexander Rodriguez </h2>
 
   <!-- Bio -->
-  <p class="Rod">Hello! My name is Alexander Rodriguez, and I am interested in computer science and cybersecurity<p>
+  <p class="Rod">Hello! My name is Alexander Rodriguez, and I am interested in computer science and cybersecurity. I like to help others who need help, and I like meeting new people.<p>
