--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <div ID="profileCard">
 
   <!-- Profile picture -->
-  <img src="https://github.com/AlexRod08-pumpkin/-day1-profile-card/blob/main/meta%20and%20lang.jpg?raw=true" alt="Profile Picture"  >
+  <img src="https://github.com/AlexRod08-pumpkin/-day1-profile-card/blob/main/meta%20and%20lang.jpg?raw=true" alt="Profile Picture" width="150" height="150" >
 
   <!-- Name -->
   <h2 class="Alex">Alexander Rodriguez </h2>
